--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -20,11 +20,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 20
 
       # ESLint and Prettier must be in `package.json`
+      - name: Install Yarn
+        run: npm install -g yarn
       - name: Install Node.js dependencies
-        run: npm install
+        run: yarn install
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
