--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 20
+      - name: Install Yarn
+        run: npm install -g yarn
       - name: Install dependencies
         run: |
-          npm ci
-          npm install
-          npm run build
+          yarn install
+          yarn build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
