--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -29,9 +29,4 @@ jobs:
         run: yarn install
 
       - name: Run linters
-        uses: wearerequired/lint-action@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          # Enable linters
-          eslint: true
-          eslint_dir: src/
+        run: yarn lint
