--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gewoonjaap/ha-nintendo-switch-card",
-  "version": "0.0.0-development",
+  "version": "1.1.0",
   "description": "Lovelace Nintendo Card",
   "keywords": [
     "home-assistant",
